enhancements for cloudflare deployment

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -14,7 +14,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  /* Primary color - KoreShield brand color */
+  /* Primary color - Koreshield brand color */
   --ifm-color-primary: #6366f1;
   --ifm-color-primary-dark: #4f46e5;
   --ifm-color-primary-darker: #4338ca;
